parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHUMAL
    COMA
    COMENTARIO
    COMENTARIO_MULTILINEA
    KENO
    PONWITU
    POTENCIA

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     definicion_instr -> RAKIN ID
Rule 4     definicion_instr -> NEMEL ID
Rule 5     instrucciones -> instruccion
Rule 6     instruccion -> pekenun_instr
Rule 7     instruccion -> definicion_instr
Rule 8     instruccion -> asignacion_instr
Rule 9     instruccion -> tuntentu_instr
Rule 10    instruccion -> may_instr
Rule 11    instruccion -> kmay_instr
Rule 12    pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER
Rule 13    asignacion_instr -> ID ASIGNACION expresion_numerica
Rule 14    asignacion_instr -> ID ASIGNACION expresion_cadena
Rule 15    tuntentu_instr -> TUNTENTU PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN
Rule 16    may_instr -> MAY PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN
Rule 17    kmay_instr -> MAY PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN KMAY ANTU instrucciones KUYEN
Rule 18    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 19    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 20    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 21    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 22    expresion_numerica -> PAREIZQ expresion_numerica PAREDER
Rule 23    expresion_numerica -> INT
Rule 24    expresion_numerica -> FLOTANTE
Rule 25    expresion_numerica -> ID
Rule 26    expresion_cadena -> CADENA_TEXTO
Rule 27    expresion_cadena -> expresion_numerica
Rule 28    expresion_cadena -> expresion_cadena CONCAT expresion_cadena
Rule 29    expresion_logica -> expresion_numerica MAYOR expresion_numerica
Rule 30    expresion_logica -> expresion_numerica MENOR expresion_numerica
Rule 31    expresion_logica -> expresion_numerica IGUALQUE expresion_numerica
Rule 32    expresion_logica -> expresion_numerica DISTINTO expresion_numerica

Terminals, with rules where they appear

ANTU                 : 15 16 17 17
ASIGNACION           : 13 14
CADENA_TEXTO         : 26
CHUMAL               : 
COMA                 : 
COMENTARIO           : 
COMENTARIO_MULTILINEA : 
CONCAT               : 28
DISTINTO             : 32
DIVIDIDO             : 21
FLOTANTE             : 24
ID                   : 3 4 13 14 25
IGUALQUE             : 31
INT                  : 23
KENO                 : 
KMAY                 : 17
KUYEN                : 15 16 17 17
MAS                  : 18
MAY                  : 16 17
MAYOR                : 29
MENOR                : 30
MENOS                : 19
NEMEL                : 4
PAREDER              : 12 15 16 17 22
PAREIZQ              : 12 15 16 17 22
PEKENUN              : 12
PONWITU              : 
POR                  : 20
POTENCIA             : 
RAKIN                : 3
TUNTENTU             : 15
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 8
definicion_instr     : 7
expresion_cadena     : 12 14 28 28
expresion_logica     : 15 16 17
expresion_numerica   : 13 18 18 19 19 20 20 21 21 22 27 29 29 30 30 31 31 32 32
init                 : 0
instruccion          : 2 5
instrucciones        : 1 2 15 16 17 17
kmay_instr           : 11
may_instr            : 10
pekenun_instr        : 6
tuntentu_instr       : 9

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (5) instrucciones -> . instruccion
    (6) instruccion -> . pekenun_instr
    (7) instruccion -> . definicion_instr
    (8) instruccion -> . asignacion_instr
    (9) instruccion -> . tuntentu_instr
    (10) instruccion -> . may_instr
    (11) instruccion -> . kmay_instr
    (12) pekenun_instr -> . PEKENUN PAREIZQ expresion_cadena PAREDER
    (3) definicion_instr -> . RAKIN ID
    (4) definicion_instr -> . NEMEL ID
    (13) asignacion_instr -> . ID ASIGNACION expresion_numerica
    (14) asignacion_instr -> . ID ASIGNACION expresion_cadena
    (15) tuntentu_instr -> . TUNTENTU PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN
    (16) may_instr -> . MAY PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN
    (17) kmay_instr -> . MAY PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN KMAY ANTU instrucciones KUYEN

    PEKENUN         shift and go to state 10
    RAKIN           shift and go to state 11
    NEMEL           shift and go to state 13
    ID              shift and go to state 12
    TUNTENTU        shift and go to state 14
    MAY             shift and go to state 15

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    pekenun_instr                  shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    tuntentu_instr                 shift and go to state 7
    may_instr                      shift and go to state 8
    kmay_instr                     shift and go to state 9

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (6) instruccion -> . pekenun_instr
    (7) instruccion -> . definicion_instr
    (8) instruccion -> . asignacion_instr
    (9) instruccion -> . tuntentu_instr
    (10) instruccion -> . may_instr
    (11) instruccion -> . kmay_instr
    (12) pekenun_instr -> . PEKENUN PAREIZQ expresion_cadena PAREDER
    (3) definicion_instr -> . RAKIN ID
    (4) definicion_instr -> . NEMEL ID
    (13) asignacion_instr -> . ID ASIGNACION expresion_numerica
    (14) asignacion_instr -> . ID ASIGNACION expresion_cadena
    (15) tuntentu_instr -> . TUNTENTU PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN
    (16) may_instr -> . MAY PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN
    (17) kmay_instr -> . MAY PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN KMAY ANTU instrucciones KUYEN

    $end            reduce using rule 1 (init -> instrucciones .)
    PEKENUN         shift and go to state 10
    RAKIN           shift and go to state 11
    NEMEL           shift and go to state 13
    ID              shift and go to state 12
    TUNTENTU        shift and go to state 14
    MAY             shift and go to state 15

    instruccion                    shift and go to state 16
    pekenun_instr                  shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    tuntentu_instr                 shift and go to state 7
    may_instr                      shift and go to state 8
    kmay_instr                     shift and go to state 9

state 3

    (5) instrucciones -> instruccion .

    PEKENUN         reduce using rule 5 (instrucciones -> instruccion .)
    RAKIN           reduce using rule 5 (instrucciones -> instruccion .)
    NEMEL           reduce using rule 5 (instrucciones -> instruccion .)
    ID              reduce using rule 5 (instrucciones -> instruccion .)
    TUNTENTU        reduce using rule 5 (instrucciones -> instruccion .)
    MAY             reduce using rule 5 (instrucciones -> instruccion .)
    $end            reduce using rule 5 (instrucciones -> instruccion .)
    KUYEN           reduce using rule 5 (instrucciones -> instruccion .)


state 4

    (6) instruccion -> pekenun_instr .

    PEKENUN         reduce using rule 6 (instruccion -> pekenun_instr .)
    RAKIN           reduce using rule 6 (instruccion -> pekenun_instr .)
    NEMEL           reduce using rule 6 (instruccion -> pekenun_instr .)
    ID              reduce using rule 6 (instruccion -> pekenun_instr .)
    TUNTENTU        reduce using rule 6 (instruccion -> pekenun_instr .)
    MAY             reduce using rule 6 (instruccion -> pekenun_instr .)
    $end            reduce using rule 6 (instruccion -> pekenun_instr .)
    KUYEN           reduce using rule 6 (instruccion -> pekenun_instr .)


state 5

    (7) instruccion -> definicion_instr .

    PEKENUN         reduce using rule 7 (instruccion -> definicion_instr .)
    RAKIN           reduce using rule 7 (instruccion -> definicion_instr .)
    NEMEL           reduce using rule 7 (instruccion -> definicion_instr .)
    ID              reduce using rule 7 (instruccion -> definicion_instr .)
    TUNTENTU        reduce using rule 7 (instruccion -> definicion_instr .)
    MAY             reduce using rule 7 (instruccion -> definicion_instr .)
    $end            reduce using rule 7 (instruccion -> definicion_instr .)
    KUYEN           reduce using rule 7 (instruccion -> definicion_instr .)


state 6

    (8) instruccion -> asignacion_instr .

    PEKENUN         reduce using rule 8 (instruccion -> asignacion_instr .)
    RAKIN           reduce using rule 8 (instruccion -> asignacion_instr .)
    NEMEL           reduce using rule 8 (instruccion -> asignacion_instr .)
    ID              reduce using rule 8 (instruccion -> asignacion_instr .)
    TUNTENTU        reduce using rule 8 (instruccion -> asignacion_instr .)
    MAY             reduce using rule 8 (instruccion -> asignacion_instr .)
    $end            reduce using rule 8 (instruccion -> asignacion_instr .)
    KUYEN           reduce using rule 8 (instruccion -> asignacion_instr .)


state 7

    (9) instruccion -> tuntentu_instr .

    PEKENUN         reduce using rule 9 (instruccion -> tuntentu_instr .)
    RAKIN           reduce using rule 9 (instruccion -> tuntentu_instr .)
    NEMEL           reduce using rule 9 (instruccion -> tuntentu_instr .)
    ID              reduce using rule 9 (instruccion -> tuntentu_instr .)
    TUNTENTU        reduce using rule 9 (instruccion -> tuntentu_instr .)
    MAY             reduce using rule 9 (instruccion -> tuntentu_instr .)
    $end            reduce using rule 9 (instruccion -> tuntentu_instr .)
    KUYEN           reduce using rule 9 (instruccion -> tuntentu_instr .)


state 8

    (10) instruccion -> may_instr .

    PEKENUN         reduce using rule 10 (instruccion -> may_instr .)
    RAKIN           reduce using rule 10 (instruccion -> may_instr .)
    NEMEL           reduce using rule 10 (instruccion -> may_instr .)
    ID              reduce using rule 10 (instruccion -> may_instr .)
    TUNTENTU        reduce using rule 10 (instruccion -> may_instr .)
    MAY             reduce using rule 10 (instruccion -> may_instr .)
    $end            reduce using rule 10 (instruccion -> may_instr .)
    KUYEN           reduce using rule 10 (instruccion -> may_instr .)


state 9

    (11) instruccion -> kmay_instr .

    PEKENUN         reduce using rule 11 (instruccion -> kmay_instr .)
    RAKIN           reduce using rule 11 (instruccion -> kmay_instr .)
    NEMEL           reduce using rule 11 (instruccion -> kmay_instr .)
    ID              reduce using rule 11 (instruccion -> kmay_instr .)
    TUNTENTU        reduce using rule 11 (instruccion -> kmay_instr .)
    MAY             reduce using rule 11 (instruccion -> kmay_instr .)
    $end            reduce using rule 11 (instruccion -> kmay_instr .)
    KUYEN           reduce using rule 11 (instruccion -> kmay_instr .)


state 10

    (12) pekenun_instr -> PEKENUN . PAREIZQ expresion_cadena PAREDER

    PAREIZQ         shift and go to state 17


state 11

    (3) definicion_instr -> RAKIN . ID

    ID              shift and go to state 18


state 12

    (13) asignacion_instr -> ID . ASIGNACION expresion_numerica
    (14) asignacion_instr -> ID . ASIGNACION expresion_cadena

    ASIGNACION      shift and go to state 19


state 13

    (4) definicion_instr -> NEMEL . ID

    ID              shift and go to state 20


state 14

    (15) tuntentu_instr -> TUNTENTU . PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN

    PAREIZQ         shift and go to state 21


state 15

    (16) may_instr -> MAY . PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN
    (17) kmay_instr -> MAY . PAREIZQ expresion_logica PAREDER ANTU instrucciones KUYEN KMAY ANTU instrucciones KUYEN

    PAREIZQ         shift and go to state 22


state 16

    (2) instrucciones -> instrucciones instruccion .

    PEKENUN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RAKIN           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    NEMEL           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TUNTENTU        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MAY             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    KUYEN           reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 17

    (12) pekenun_instr -> PEKENUN PAREIZQ . expresion_cadena PAREDER
    (26) expresion_cadena -> . CADENA_TEXTO
    (27) expresion_cadena -> . expresion_numerica
    (28) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena
    (18) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (19) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (20) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (21) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (22) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (23) expresion_numerica -> . INT
    (24) expresion_numerica -> . FLOTANTE
    (25) expresion_numerica -> . ID

    CADENA_TEXTO    shift and go to state 25
    PAREIZQ         shift and go to state 23
    INT             shift and go to state 27
    FLOTANTE        shift and go to state 28
    ID              shift and go to state 29

    expresion_cadena               shift and go to state 24
    expresion_numerica             shift and go to state 26

state 18

    (3) definicion_instr -> RAKIN ID .

    PEKENUN         reduce using rule 3 (definicion_instr -> RAKIN ID .)
    RAKIN           reduce using rule 3 (definicion_instr -> RAKIN ID .)
    NEMEL           reduce using rule 3 (definicion_instr -> RAKIN ID .)
    ID              reduce using rule 3 (definicion_instr -> RAKIN ID .)
    TUNTENTU        reduce using rule 3 (definicion_instr -> RAKIN ID .)
    MAY             reduce using rule 3 (definicion_instr -> RAKIN ID .)
    $end            reduce using rule 3 (definicion_instr -> RAKIN ID .)
    KUYEN           reduce using rule 3 (definicion_instr -> RAKIN ID .)


state 19

    (13) asignacion_instr -> ID ASIGNACION . expresion_numerica
    (14) asignacion_instr -> ID ASIGNACION . expresion_cadena
    (18) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (19) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (20) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (21) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (22) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (23) expresion_numerica -> . INT
    (24) expresion_numerica -> . FLOTANTE
    (25) expresion_numerica -> . ID
    (26) expresion_cadena -> . CADENA_TEXTO
    (27) expresion_cadena -> . expresion_numerica
    (28) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena

    PAREIZQ         shift and go to state 23
    INT             shift and go to state 27
    FLOTANTE        shift and go to state 28
    ID              shift and go to state 29
    CADENA_TEXTO    shift and go to state 25

    expresion_numerica             shift and go to state 30
    expresion_cadena               shift and go to state 31

state 20

    (4) definicion_instr -> NEMEL ID .

    PEKENUN         reduce using rule 4 (definicion_instr -> NEMEL ID .)
    RAKIN           reduce using rule 4 (definicion_instr -> NEMEL ID .)
    NEMEL           reduce using rule 4 (definicion_instr -> NEMEL ID .)
    ID              reduce using rule 4 (definicion_instr -> NEMEL ID .)
    TUNTENTU        reduce using rule 4 (definicion_instr -> NEMEL ID .)
    MAY             reduce using rule 4 (definicion_instr -> NEMEL ID .)
    $end            reduce using rule 4 (definicion_instr -> NEMEL ID .)
    KUYEN           reduce using rule 4 (definicion_instr -> NEMEL ID .)


state 21

    (15) tuntentu_instr -> TUNTENTU PAREIZQ . expresion_logica PAREDER ANTU instrucciones KUYEN
    (29) expresion_logica -> . expresion_numerica MAYOR expresion_numerica
    (30) expresion_logica -> . expresion_numerica MENOR expresion_numerica
    (31) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (32) expresion_logica -> . expresion_numerica DISTINTO expresion_numerica
    (18) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (19) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (20) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (21) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (22) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (23) expresion_numerica -> . INT
    (24) expresion_numerica -> . FLOTANTE
    (25) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 23
    INT             shift and go to state 27
    FLOTANTE        shift and go to state 28
    ID              shift and go to state 29

    expresion_logica               shift and go to state 32
    expresion_numerica             shift and go to state 33

state 22

    (16) may_instr -> MAY PAREIZQ . expresion_logica PAREDER ANTU instrucciones KUYEN
    (17) kmay_instr -> MAY PAREIZQ . expresion_logica PAREDER ANTU instrucciones KUYEN KMAY ANTU instrucciones KUYEN
    (29) expresion_logica -> . expresion_numerica MAYOR expresion_numerica
    (30) expresion_logica -> . expresion_numerica MENOR expresion_numerica
    (31) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (32) expresion_logica -> . expresion_numerica DISTINTO expresion_numerica
    (18) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (19) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (20) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (21) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (22) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (23) expresion_numerica -> . INT
    (24) expresion_numerica -> . FLOTANTE
    (25) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 23
    INT             shift and go to state 27
    FLOTANTE        shift and go to state 28
    ID              shift and go to state 29

    expresion_logica               shift and go to state 34
    expresion_numerica             shift and go to state 33

state 23

    (22) expresion_numerica -> PAREIZQ . expresion_numerica PAREDER
    (18) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (19) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (20) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (21) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (22) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (23) expresion_numerica -> . INT
    (24) expresion_numerica -> . FLOTANTE
    (25) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 23
    INT             shift and go to state 27
    FLOTANTE        shift and go to state 28
    ID              shift and go to state 29

    expresion_numerica             shift and go to state 35

state 24

    (12) pekenun_instr -> PEKENUN PAREIZQ expresion_cadena . PAREDER
    (28) expresion_cadena -> expresion_cadena . CONCAT expresion_cadena

    PAREDER         shift and go to state 36
    CONCAT          shift and go to state 37


state 25

    (26) expresion_cadena -> CADENA_TEXTO .

    PAREDER         reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    CONCAT          reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    PEKENUN         reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    RAKIN           reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    NEMEL           reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    ID              reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    TUNTENTU        reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    MAY             reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    $end            reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)
    KUYEN           reduce using rule 26 (expresion_cadena -> CADENA_TEXTO .)


state 26

    (27) expresion_cadena -> expresion_numerica .
    (18) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (19) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (20) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (21) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    PAREDER         reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    CONCAT          reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    PEKENUN         reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    RAKIN           reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    NEMEL           reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    ID              reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    TUNTENTU        reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    MAY             reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    $end            reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    KUYEN           reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    MAS             shift and go to state 38
    MENOS           shift and go to state 39
    POR             shift and go to state 40
    DIVIDIDO        shift and go to state 41


state 27

    (23) expresion_numerica -> INT .

    MAS             reduce using rule 23 (expresion_numerica -> INT .)
    MENOS           reduce using rule 23 (expresion_numerica -> INT .)
    POR             reduce using rule 23 (expresion_numerica -> INT .)
    DIVIDIDO        reduce using rule 23 (expresion_numerica -> INT .)
    PAREDER         reduce using rule 23 (expresion_numerica -> INT .)
    CONCAT          reduce using rule 23 (expresion_numerica -> INT .)
    PEKENUN         reduce using rule 23 (expresion_numerica -> INT .)
    RAKIN           reduce using rule 23 (expresion_numerica -> INT .)
    NEMEL           reduce using rule 23 (expresion_numerica -> INT .)
    ID              reduce using rule 23 (expresion_numerica -> INT .)
    TUNTENTU        reduce using rule 23 (expresion_numerica -> INT .)
    MAY             reduce using rule 23 (expresion_numerica -> INT .)
    $end            reduce using rule 23 (expresion_numerica -> INT .)
    KUYEN           reduce using rule 23 (expresion_numerica -> INT .)
    MAYOR           reduce using rule 23 (expresion_numerica -> INT .)
    MENOR           reduce using rule 23 (expresion_numerica -> INT .)
    IGUALQUE        reduce using rule 23 (expresion_numerica -> INT .)
    DISTINTO        reduce using rule 23 (expresion_numerica -> INT .)


state 28

    (24) expresion_numerica -> FLOTANTE .
